syntax = "proto3";

package TW.Filecoin.Proto;
option java_package = "wallet.core.jni.proto";

// Input data necessary to create a signed transaction.
message SigningInput {
    // The secret private key of the sender account, used for signing (32 bytes).
    bytes private_key = 1;

    // Recipient's address.
    string to = 2;

    // Transaction nonce.
    uint64 nonce = 3;

    // Transfer value (uint256, serialized little endian)
    bytes value = 4;

    // Gas limit.
    int64 gas_limit = 5;

    // Gas fee cap (uint256, serialized little endian)
    bytes gas_fee_cap = 6;

    // Gas premium (uint256, serialized little endian)
    bytes gas_premium = 7;
}

// Result containing the signed and encoded transaction.
message SigningOutput {
    // Resulting transaction, in JSON.
    string json = 1;
}
